# portfolio

./: .gitignore  ERRORS.txt  Pipfile  Procfile  README.md  app.py  application.py  designFeatures.txt  docker-compose.yml  newAPI.txt  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  render.yml  requirements.txt  routeTests.rest  tailwind.config.js  templateEnv.txt  tsconfig.json  webpack.config.js
UI/: badges.tsx  footer.tsx  header.tsx  intro.tsx  navbar.tsx
client/: Dockerfile  package-lock.json
components/: arrow.tsx  border.tsx  icon.tsx  keyicon.tsx  section.tsx  slideshow.tsx  trophy.tsx  underConstruction.tsx  underline.tsx
config/: envSwitch.py
helpers/: apiFetches.ts  badges.ts  content.ts  projectCryptionHandlers.ts  s3.ts  stats.ts
hooks/: index.tsx  useModal.tsx
lib/: sections.data.ts
modules/: main.py  pg.py  s3.py
pages/: index.tsx
sections/: Badges.tsx  Border.tsx  Footer.tsx  Header.tsx  Navbar.tsx  Projects.tsx  Stats.tsx  index.tsx  section1.tsx  section2.tsx  section3.tsx
server/: Cargo.toml  Dockerfile  dbEndpoints.rest  requests.http
server/src/: controllers.rs  main.rs  models.rs  routes.rs
server/src/config/: db.rs  types.rs
server/src/controllers/: contact.rs  projects.rs
server/src/mods/: main.rs  s3.rs
shared/: chart.tsx  counter.tsx  icon.tsx  keyicon.tsx  modal.tsx  section.tsx  slideshow.tsx  trophy.tsx  types.ts  underline.tsx
static/: flexbox.css  main.css  modalbox.css
styles/: globals.css
templates/: about.html  contact.html  hobbies.ejs  hobbies.html  index.html  layout.html  login.html  (+2 more)
(+60 files in other folders)
