[package]
name = "server"
version = "0.1.0"
authors = ["alvarian <vitarka88@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.8"
rocket_cors = "0.5.2"
dotenv = "0.15.0"
rocket_contrib = "0.4.10"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
dhb-postgres-heroku = "0.1.0-alpha.2"